gtk+2.0 (2.24.30-3) UNRELEASED; urgency=medium

  [ Jeremy Bicha ]
  * Use https for copyright headers
  * Use https in d/watch and use new "special strings" to help standardize
    format

  [ Emilio Pozuelo Monfort ]
  * Let libgtk2.0-0 recommend libgail-common, so that installing a
    GTK+2.0 application also installs the accessibility libs.
    See #822612.

 -- Simon McVittie <smcv@debian.org>  Thu, 23 Jun 2016 09:42:34 +0100

gtk+2.0 (2.24.30-2) unstable; urgency=medium

  * Acknowledge NMU, thanks Salvatore Bonaccorso.
  * Drop gtk-update-icon-cache from libgtk2.0-bin. From now on we only provide
    one implementation which is built from src:gtk+3.0 and shipped in a
    separate package called gtk-update-icon-cache. To simplify the transition
    make libgtk2.0-bin depend on gtk-update-icon-cache. Once all theme
    packages have been updated, this dependency can be dropped.
  * Bump Standards-Version to 3.9.8.

 -- Michael Biebl <biebl@debian.org>  Sun, 22 May 2016 23:18:37 +0200

gtk+2.0 (2.24.30-1.1) unstable; urgency=medium

  * Non-maintainer upload.
  * CVE-2013-7447: Integer overflow in image handling (Closes: #799275)

 -- Salvatore Bonaccorso <carnil@debian.org>  Fri, 18 Mar 2016 20:20:37 +0100

gtk+2.0 (2.24.30-1) unstable; urgency=medium

  * New upstream release 2.24.30
    - Support Randr 1.5 monitor information
    - Fixes build against newer gdk-pixbuf
  * debian/patches/005_support_disabling_x11_extensions.patch: Refresh.

 -- Iain Lane <laney@debian.org>  Mon, 07 Mar 2016 13:51:18 +0000

gtk+2.0 (2.24.29-1) unstable; urgency=medium

  * New upstream release.

 -- Michael Biebl <biebl@debian.org>  Mon, 14 Dec 2015 01:12:27 +0100

gtk+2.0 (2.24.28-1) unstable; urgency=medium

  * New upstream release.
  * Refresh patches.
  * Drop obsolete Breaks/Conflicts/Replaces from pre-wheezy.
  * Stop including image data when generating the icon caches since the cache
    files tend to grow rather large and aren't that useful anymore nowadays.