@@ -256,6 +256,22 @@ Description: GNOME Accessibility Implementation Library -- shared libraries
  .
  This package contains the shared library.
 
+Package: libgail18-udeb
+Package-Type: udeb
+Architecture: any
+Depends: ${misc:Depends},
+         ${shlibs:Depends},
+         @UDEB_PKG@ (= ${binary:Version})
+Multi-Arch: same
+Pre-Depends: ${misc:Pre-Depends}
+Description: GNOME Accessibility Implementation Library -- shared libraries
+ Gail implements ATK interfaces for GTK+ widgets which are dynamically
+ loadable at runtime by a GTK+ application. Once loaded, those parts of
+ an application that use standard GTK+ widgets will have a basic level
+ of accessibility, without the need to modify the application at all.
+ .
+ This package contains the shared library for the Debian installer.
+
 Package: libgail-common
 Architecture: any
 Depends: ${misc:Depends},
